--- a/po/pl.po
+++ b/po/pl.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: xdg-desktop-portal\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-07-22 02:09+0200\n"
+"Report-Msgid-Bugs-To: https://github.com/flatpak/xdg-desktop-portal/issues\n"
+"POT-Creation-Date: 2016-07-28 21:10-0400\n"
 "PO-Revision-Date: 2016-07-22 02:10+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <gnomepl@aviary.pl>\n"
