--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xdg-desktop-portal (0.5-2) UNRELEASED; urgency=medium
+
+  * Add patches to run xdg-desktop-portal as a systemd user service
+    if dbus-user-session is installed
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 15 Feb 2017 08:45:16 +0000
+
 xdg-desktop-portal (0.5-1) unstable; urgency=medium
 
   * New upstream release
