--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ xdg-desktop-portal (0.5-2) UNRELEASED; urgency=medium
     if dbus-user-session is installed
   * Move to debhelper compat level 10
   * Omit unimplemented configure option --enable-installed-tests
+  * Do not explicitly disable quiet Automake output: dh now does this
+    by default
 
  -- Simon McVittie <smcv@debian.org>  Wed, 15 Feb 2017 08:45:16 +0000
 
