--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ xdg-desktop-portal (0.5-2) UNRELEASED; urgency=medium
   * Omit unimplemented configure option --enable-installed-tests
   * Do not explicitly disable quiet Automake output: dh now does this
     by default
+  * Move API documentation from main package to -dev package
 
  -- Simon McVittie <smcv@debian.org>  Wed, 15 Feb 2017 08:45:16 +0000
 
