--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ xdg-desktop-portal (0.5-2) UNRELEASED; urgency=medium
   * Do not explicitly disable quiet Automake output: dh now does this
     by default
   * Move API documentation from main package to -dev package
+  * Register API documentation with doc-base
 
  -- Simon McVittie <smcv@debian.org>  Wed, 15 Feb 2017 08:45:16 +0000
 
