--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xdg-desktop-portal (0.6-2) UNRELEASED; urgency=medium
+
+  * Set ${libdir} to /usr/lib to put the pkg-config metadata in an
+    architecture-independent location (Closes: #864451)
+
+ -- Simon McVittie <smcv@debian.org>  Thu, 08 Jun 2017 22:27:55 +0100
+
 xdg-desktop-portal (0.6-1) experimental; urgency=medium
 
   * New upstream release
