--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-xdg-desktop-portal (0.6-2) UNRELEASED; urgency=medium
+xdg-desktop-portal (0.8-1) UNRELEASED; urgency=medium
 
+  * New upstream release
   * Add patches to make the development files completely
     architecture-independent (Closes: #864451)
   * Make xdg-desktop-portal-dev Architecture: all
