--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (0.8-2) UNRELEASED; urgency=medium
+
+  * Mark patches as applied upstream for 0.9
+
+ -- Simon McVittie <smcv@debian.org>  Sat, 10 Jun 2017 10:12:20 +0100
+
 xdg-desktop-portal (0.8-1) experimental; urgency=medium
 
   * New upstream release
