--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ xdg-desktop-portal (0.8-3) UNRELEASED; urgency=medium
 
   * Set Rules-Requires-Root to no
   * Use https Format URL in d/copyright
+  * Standards-Version: 4.1.1 (no further changes)
 
  -- Simon McVittie <smcv@debian.org>  Sat, 11 Nov 2017 12:32:45 +0000
 
