--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (0.9-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 24 Nov 2017 10:36:34 +0000
+
 xdg-desktop-portal (0.8-3) unstable; urgency=medium
 
   * Set Rules-Requires-Root to no
