--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (0.9-2) UNRELEASED; urgency=medium
+
+  * Standards-Version: 4.1.2 (no changes)
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 05 Dec 2017 08:26:27 +0000
+
 xdg-desktop-portal (0.9-1) unstable; urgency=medium
 
   * New upstream release
