--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 xdg-desktop-portal (0.9-2) UNRELEASED; urgency=medium
 
   * Standards-Version: 4.1.3 (no changes)
+  * Change Vcs-* to point to salsa.debian.org
 
  -- Simon McVittie <smcv@debian.org>  Tue, 05 Dec 2017 08:26:27 +0000
 
