--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,8 @@ xdg-desktop-portal (0.9-2) UNRELEASED; urgency=medium
 
   * Standards-Version: 4.1.3 (no changes)
   * Change Vcs-* to point to salsa.debian.org
-  * d/p/0.10/: Apply various bug fix patches from upstream git
+  * d/p/0.10/: Update to upstream git commit 0.9-9-g422ecf3 for various
+    bug fixes
 
  -- Simon McVittie <smcv@debian.org>  Tue, 05 Dec 2017 08:26:27 +0000
 
