--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-xdg-desktop-portal (0.9-2) UNRELEASED; urgency=medium
+xdg-desktop-portal (0.9-2) unstable; urgency=medium
 
   * Standards-Version: 4.1.3 (no changes)
   * Change Vcs-* to point to salsa.debian.org
   * d/p/0.10/: Update to upstream git commit 0.9-9-g422ecf3 for various
     bug fixes
 
- -- Simon McVittie <smcv@debian.org>  Tue, 05 Dec 2017 08:26:27 +0000
+ -- Simon McVittie <smcv@debian.org>  Thu, 18 Jan 2018 08:46:29 +0000
 
 xdg-desktop-portal (0.9-1) unstable; urgency=medium
 
