--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (0.10-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 14 Feb 2018 12:05:43 +0000
+
 xdg-desktop-portal (0.9-2) unstable; urgency=medium
 
   * Standards-Version: 4.1.3 (no changes)
