--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ xdg-desktop-portal (0.10-1) UNRELEASED; urgency=medium
   * Add new build-dependencies for FUSE
   * Install the permission store and documents portal
   * d/copyright: Update
+  * Drop flatpak build-dependency, no longer needed
 
  -- Simon McVittie <smcv@debian.org>  Wed, 14 Feb 2018 12:05:43 +0000
 
