--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ xdg-desktop-portal (0.10-1) UNRELEASED; urgency=medium
   * Drop flatpak build-dependency, no longer needed
   * Remove patches, applied upstream
   * Add installed-tests
+  * Depend on FUSE
 
  -- Simon McVittie <smcv@debian.org>  Wed, 14 Feb 2018 12:05:43 +0000
 
