--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ xdg-desktop-portal (0.10-1) UNRELEASED; urgency=medium
   * d/copyright: Update
   * Drop flatpak build-dependency, no longer needed
   * Remove patches, applied upstream
-  * Add installed-tests
   * Depend on FUSE
+  * Build installed-tests, but don't install them for now to avoid the
+    NEW queue
 
  -- Simon McVittie <smcv@debian.org>  Wed, 14 Feb 2018 12:05:43 +0000
 
