--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ xdg-desktop-portal (0.10-1) UNRELEASED; urgency=medium
   * Depend on FUSE
   * Build installed-tests, but don't install them for now to avoid the
     NEW queue
+  * Use dh_missing --fail-missing instead of dh_install --fail-missing
 
  -- Simon McVittie <smcv@debian.org>  Wed, 14 Feb 2018 12:05:43 +0000
 
