--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xdg-desktop-portal (0.10-1) UNRELEASED; urgency=medium
+xdg-desktop-portal (0.10-1) unstable; urgency=medium
 
   * New upstream release
   * Add Breaks/Replaces for flatpak (<< 0.10.4-1~) since this package
@@ -14,7 +14,7 @@ xdg-desktop-portal (0.10-1) UNRELEASED; urgency=medium
     NEW queue
   * Use dh_missing --fail-missing instead of dh_install --fail-missing
 
- -- Simon McVittie <smcv@debian.org>  Wed, 14 Feb 2018 12:05:43 +0000
+ -- Simon McVittie <smcv@debian.org>  Wed, 14 Feb 2018 17:44:15 +0000
 
 xdg-desktop-portal (0.9-2) unstable; urgency=medium
 
