--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 xdg-desktop-portal (0.10-4) UNRELEASED; urgency=medium
 
   * Merge from experimental, with autopkgtests included
+  * d/p/build-Run-install-test-data-hook-as-intended.patch:
+    Mark patch as applied upstream
 
  -- Simon McVittie <smcv@debian.org>  Fri, 16 Feb 2018 14:48:27 +0000
 
