--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xdg-desktop-portal (0.11-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+    - Drop patch, applied upstream
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 25 Apr 2018 16:23:57 +0100
+
 xdg-desktop-portal (0.10-4) unstable; urgency=medium
 
   * Merge from experimental, with autopkgtests included
