--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ xdg-desktop-portal (0.11-1) UNRELEASED; urgency=medium
 
   * New upstream release
     - Drop patch, applied upstream
+  * Standards-Version: 4.1.4 (no changes)
 
  -- Simon McVittie <smcv@debian.org>  Wed, 25 Apr 2018 16:23:57 +0100
 
