--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xdg-desktop-portal (0.11-2) UNRELEASED; urgency=medium
+
+  [ Jeremy Bicha ]
+  * Update package description to mention Snap
+  * Use github page as homepage
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 25 Apr 2018 23:20:27 +0100
+
 xdg-desktop-portal (0.11-1) unstable; urgency=medium
 
   * New upstream release
