--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-xdg-desktop-portal (0.11-2) UNRELEASED; urgency=medium
+xdg-desktop-portal (0.11-2) unstable; urgency=medium
 
   [ Jeremy Bicha ]
   * Update package description to mention Snap
   * Use github page as homepage
 
- -- Simon McVittie <smcv@debian.org>  Wed, 25 Apr 2018 23:20:27 +0100
+ -- Simon McVittie <smcv@debian.org>  Sun, 24 Jun 2018 22:02:48 +0100
 
 xdg-desktop-portal (0.11-1) unstable; urgency=medium
 
