--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (0.99-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Sat, 28 Jul 2018 12:14:21 +0100
+
 xdg-desktop-portal (0.11-2) unstable; urgency=medium
 
   [ Jeremy Bicha ]
