Install upstream NEWS

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 xdg-desktop-portal (1.0-1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * Install upstream NEWS
 
  -- Simon McVittie <smcv@debian.org>  Thu, 23 Aug 2018 09:51:04 +0100
 
