--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ xdg-desktop-portal (1.0-1) UNRELEASED; urgency=medium
 
   * New upstream release
   * Install upstream NEWS
+  * Standards-Version: 4.2.0 (no further changes)
 
  -- Simon McVittie <smcv@debian.org>  Thu, 23 Aug 2018 09:51:04 +0100
 
