--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-xdg-desktop-portal (1.0-1) UNRELEASED; urgency=medium
+xdg-desktop-portal (1.0-1) unstable; urgency=medium
 
   * New upstream release
   * Install upstream NEWS
   * Standards-Version: 4.2.0 (no further changes)
 
- -- Simon McVittie <smcv@debian.org>  Thu, 23 Aug 2018 09:51:04 +0100
+ -- Simon McVittie <smcv@debian.org>  Thu, 23 Aug 2018 09:53:13 +0100
 
 xdg-desktop-portal (0.99-1) unstable; urgency=medium
 
