--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (1.0.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 31 Aug 2018 08:51:48 +0100
+
 xdg-desktop-portal (1.0-1) unstable; urgency=medium
 
   * New upstream release
