Add patch to make NetworkMonitor.GetStatus() work as intended

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 xdg-desktop-portal (1.0.1-1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * d/p/network-monitor-Build-variants-for-GetStatus-correctly.patch:
+    Add patch to make NetworkMonitor.GetStatus() work as intended
 
  -- Simon McVittie <smcv@debian.org>  Fri, 31 Aug 2018 08:51:48 +0100
 
