--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (1.1.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Sun, 18 Nov 2018 20:42:53 +0000
+
 xdg-desktop-portal (1.0.3-1) unstable; urgency=medium
 
   * New upstream release
