--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 xdg-desktop-portal (1.1.0-1) UNRELEASED; urgency=medium
 
   * New upstream release
+    - d/copyright: Update
 
  -- Simon McVittie <smcv@debian.org>  Sun, 18 Nov 2018 20:42:53 +0000
 
