d/control: Build-depend on fontconfig, for fontconfig cache invalidation in Settings portal

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ xdg-desktop-portal (1.1.0-1) UNRELEASED; urgency=medium
 
   * New upstream release
     - d/copyright: Update
+    - d/control: Build-depend on fontconfig, for fontconfig cache
+      invalidation in Settings portal
 
  -- Simon McVittie <smcv@debian.org>  Sun, 18 Nov 2018 20:42:53 +0000
 
