--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ xdg-desktop-portal (1.1.0-1) UNRELEASED; urgency=medium
     - d/control: Build-depend on flatpak, for permission-store test
   * Don't build with Location portal yet, because geoclue-2.0 is
     currently too old
+  * Drop patch, applied upstream
 
  -- Simon McVittie <smcv@debian.org>  Sun, 18 Nov 2018 20:42:53 +0000
 
