--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ xdg-desktop-portal (1.1.0-1) UNRELEASED; urgency=medium
   * Drop patch, applied upstream
   * d/gbp.conf: Use debian/experimental branch
   * d/patches: Skip another build-time test when FUSE is not supported
+  * d/patches: Don't show a critical warning when a document permissions
+    entry is removed
 
  -- Simon McVittie <smcv@debian.org>  Mon, 19 Nov 2018 14:03:26 +0000
 
