--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xdg-desktop-portal (1.1.0-1) UNRELEASED; urgency=medium
+xdg-desktop-portal (1.1.0-1) experimental; urgency=medium
 
   * New upstream development release
     - d/copyright: Update
@@ -14,7 +14,7 @@ xdg-desktop-portal (1.1.0-1) UNRELEASED; urgency=medium
     entry is removed
   * Enable Pipewire support, for screencasting
 
- -- Simon McVittie <smcv@debian.org>  Mon, 19 Nov 2018 14:03:26 +0000
+ -- Simon McVittie <smcv@debian.org>  Mon, 19 Nov 2018 18:47:57 +0000
 
 xdg-desktop-portal (1.0.3-1) unstable; urgency=medium
 
