--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xdg-desktop-portal (1.1.1-1) UNRELEASED; urgency=medium
+
+  * New upstream development release
+    - Drop patches, applied upstream
+
+ -- Simon McVittie <smcv@debian.org>  Thu, 17 Jan 2019 08:05:49 +0000
+
 xdg-desktop-portal (1.1.0-1) experimental; urgency=medium
 
   * New upstream development release
