--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (1.1.1-2) UNRELEASED; urgency=medium
+
+  * Mark patches as forwarded
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 18 Jan 2019 10:10:55 +0000
+
 xdg-desktop-portal (1.1.1-1) experimental; urgency=medium
 
   * New upstream development release
