--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 xdg-desktop-portal (1.1.1-2) UNRELEASED; urgency=medium
 
   * Mark patches as forwarded
+  * d/upstream/metadata: Add DEP-12 metadata
 
  -- Simon McVittie <smcv@debian.org>  Fri, 18 Jan 2019 10:10:55 +0000
 
