--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (1.4.2-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Mon, 10 Jun 2019 08:52:13 +0100
+
 xdg-desktop-portal (1.2.0-1) unstable; urgency=medium
 
   [ Simon McVittie ]
