--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-xdg-desktop-portal (1.4.2-1) UNRELEASED; urgency=medium
+xdg-desktop-portal (1.4.2-1) experimental; urgency=medium
 
   * New upstream release
   * Disable pipewire (screencasting) until 0.2.6 is available in Debian
   * Build-depend on libjson-glib-dev
   * d/copyright: Update
 
- -- Simon McVittie <smcv@debian.org>  Mon, 10 Jun 2019 08:52:13 +0100
+ -- Simon McVittie <smcv@debian.org>  Mon, 10 Jun 2019 09:37:22 +0100
 
 xdg-desktop-portal (1.2.0-1) unstable; urgency=medium
 
