--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (1.4.2-2) UNRELEASED; urgency=medium
+
+  * d/salsa-ci.yml: Request standard CI on salsa.debian.org
+
+ -- Simon McVittie <smcv@debian.org>  Sun, 23 Jun 2019 20:12:37 +0100
+
 xdg-desktop-portal (1.4.2-1) experimental; urgency=medium
 
   * New upstream release
