--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 xdg-desktop-portal (1.4.2-2) UNRELEASED; urgency=medium
 
   * d/salsa-ci.yml: Request standard CI on salsa.debian.org
+  * d/rules: Unset LANGUAGE as well as setting LC_ALL.
+    LANGUAGE is used even when LC_ALL is set, as long as it isn't set
+    to C (which in our case it isn't).
 
  -- Simon McVittie <smcv@debian.org>  Sun, 23 Jun 2019 20:12:37 +0100
 
