--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ xdg-desktop-portal (1.4.2-2) UNRELEASED; urgency=medium
   * d/p/test-doc-portal-Check-for-FUSE-support-more-thoroughly.patch:
     Skip tests when FUSE is non-functional, even if we are root
   * Standards-Version: 4.4.0 (no changes required)
+  * Use debhelper-compat 12
+    - Remove redundant --libexecdir=/usr/libexec, which is the default
+      at this compat level
 
  -- Simon McVittie <smcv@debian.org>  Sun, 23 Jun 2019 20:12:37 +0100
 
