Update icon validator to the one from Flatpak 1.4.2

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ xdg-desktop-portal (1.4.2-2) UNRELEASED; urgency=medium
   * Use debhelper-compat 12
     - Remove redundant --libexecdir=/usr/libexec, which is the default
       at this compat level
+  * d/p/Replace-the-icon-validator-with-the-one-from-Flatpak-1.4..patch:
+    Update icon validator to the one from Flatpak 1.4.2
 
  -- Simon McVittie <smcv@debian.org>  Sun, 23 Jun 2019 20:12:37 +0100
 
