--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-xdg-desktop-portal (1.4.2-2) UNRELEASED; urgency=medium
+xdg-desktop-portal (1.4.2-2) unstable; urgency=medium
 
+  * Release to unstable
   * d/salsa-ci.yml: Request standard CI on salsa.debian.org
   * d/p/test-doc-portal-Check-for-FUSE-support-more-thoroughly.patch:
     Skip tests when FUSE is non-functional, even if we are root
@@ -11,7 +12,7 @@ xdg-desktop-portal (1.4.2-2) UNRELEASED; urgency=medium
     Update icon validator to the one from Flatpak 1.4.2
   * Mark autopkgtest as flaky due to #931726
 
- -- Simon McVittie <smcv@debian.org>  Sun, 23 Jun 2019 20:12:37 +0100
+ -- Simon McVittie <smcv@debian.org>  Tue, 16 Jul 2019 09:19:47 +0100
 
 xdg-desktop-portal (1.4.2-1) experimental; urgency=medium
 
