--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (1.4.2-3) UNRELEASED; urgency=medium
+
+  * Standards-Version: 4.4.1 (no changes required)
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 01 Oct 2019 10:37:08 +0100
+
 xdg-desktop-portal (1.4.2-2) unstable; urgency=medium
 
   * Release to unstable
