--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-xdg-desktop-portal (1.5.4-1) UNRELEASED; urgency=medium
+xdg-desktop-portal (1.5.4-1) experimental; urgency=medium
 
   * Branch for experimental
   * New upstream development release
     - d/patches: Rebase
     - d/rules: Explicitly disable libportal-based tests (ITP: #946605)
 
- -- Simon McVittie <smcv@debian.org>  Thu, 12 Dec 2019 07:49:45 +0000
+ -- Simon McVittie <smcv@debian.org>  Fri, 13 Dec 2019 23:23:14 +0000
 
 xdg-desktop-portal (1.4.2-3) unstable; urgency=medium
 
