--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xdg-desktop-portal (1.6.0-1) UNRELEASED; urgency=medium
+xdg-desktop-portal (1.6.0-1) unstable; urgency=medium
 
   * New upstream stable release
     - d/watch: Only watch for stable releases
@@ -23,7 +23,7 @@ xdg-desktop-portal (1.6.0-1) UNRELEASED; urgency=medium
     Relabel the icon validator as coming from Flatpak 1.6.0
     (it's the same as 1.4.2)
 
- -- Simon McVittie <smcv@debian.org>  Fri, 20 Dec 2019 14:59:30 +0000
+ -- Simon McVittie <smcv@debian.org>  Tue, 24 Dec 2019 14:15:27 +0000
 
 xdg-desktop-portal (1.5.4-1) experimental; urgency=medium
 
