--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (1.6.0-2) UNRELEASED; urgency=medium
+
+  * Fix Vcs-Git to point to default branch again
+
+ -- Simon McVittie <smcv@debian.org>  Thu, 26 Dec 2019 12:52:05 +0000
+
 xdg-desktop-portal (1.6.0-1) unstable; urgency=medium
 
   * New upstream stable release
