--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ xdg-desktop-portal (1.6.0-2) UNRELEASED; urgency=medium
 
   * Fix Vcs-Git to point to default branch again
   * Set upstream metadata fields: Repository.
+  * Remove obsolete field Name from debian/upstream/metadata (already
+    present in machine-readable debian/copyright).
 
  -- Simon McVittie <smcv@debian.org>  Thu, 26 Dec 2019 12:52:05 +0000
 
