--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ xdg-desktop-portal (1.6.0-2) UNRELEASED; urgency=medium
   * Set upstream metadata fields: Repository.
   * Remove obsolete field Name from debian/upstream/metadata (already
     present in machine-readable debian/copyright).
+  * Standards-Version: 4.5.0 (no changes required)
 
  -- Simon McVittie <smcv@debian.org>  Thu, 26 Dec 2019 12:52:05 +0000
 
