--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 xdg-desktop-portal (1.6.0-2) UNRELEASED; urgency=medium
 
-  * Fix Vcs-Git to point to default branch again
+  * Switch to experimental branch
+    - d/watch: Watch for development releases
+    - d/gbp.conf, d/control: Use debian/experimental packaging branch
+    - d/gbp.conf: Use upstream/latest branch
   * Set upstream metadata fields: Repository.
   * Remove obsolete field Name from debian/upstream/metadata (already
     present in machine-readable debian/copyright).
