--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-xdg-desktop-portal (1.6.0-2) UNRELEASED; urgency=medium
+xdg-desktop-portal (1.7.0-1) UNRELEASED; urgency=medium
 
   * Switch to experimental branch
     - d/watch: Watch for development releases
     - d/gbp.conf, d/control: Use debian/experimental packaging branch
     - d/gbp.conf: Use upstream/latest branch
+  * New upstream development release
   * Set upstream metadata fields: Repository.
   * Remove obsolete field Name from debian/upstream/metadata (already
     present in machine-readable debian/copyright).
