--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ xdg-desktop-portal (1.7.0-1) UNRELEASED; urgency=medium
     - d/gbp.conf, d/control: Use debian/experimental packaging branch
     - d/gbp.conf: Use upstream/latest branch
   * New upstream development release
+  * Disable pipewire until 0.3.x is available (#954022)
   * Set upstream metadata fields: Repository.
   * Remove obsolete field Name from debian/upstream/metadata (already
     present in machine-readable debian/copyright).
