d/p/tests-Divert-service-stdout-to-stderr.patch: Simplify

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ xdg-desktop-portal (1.7.0-1) UNRELEASED; urgency=medium
   * Remove obsolete field Name from debian/upstream/metadata (already
     present in machine-readable debian/copyright).
   * Standards-Version: 4.5.0 (no changes required)
+  * d/p/tests-Divert-service-stdout-to-stderr.patch: Simplify
 
  -- Simon McVittie <smcv@debian.org>  Thu, 26 Dec 2019 12:52:05 +0000
 
