--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xdg-desktop-portal (1.7.2-1) UNRELEASED; urgency=medium
+
+  * New upstream development release
+  * Drop patch skipping FUSE tests if necessary,
+    upstream made an equivalent change
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 03 Apr 2020 19:39:53 +0100
+
 xdg-desktop-portal (1.7.1-1) experimental; urgency=medium
 
   * New upstream development release
