--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xdg-desktop-portal (1.7.2-2) unstable; urgency=medium
+
+  * d/rules: Don't explicitly use --as-needed linker option.
+    It's the default with bullseye toolchains.
+  * Release to unstable as part of the pipewire 0.3 transition
+
+ -- Simon McVittie <smcv@debian.org>  Thu, 10 Sep 2020 12:32:17 +0100
+
 xdg-desktop-portal (1.7.2-1) experimental; urgency=medium
 
   * New upstream development release
