--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-xdg-desktop-portal (1.8.0-1) UNRELEASED; urgency=medium
+xdg-desktop-portal (1.8.0-1) unstable; urgency=medium
 
   * New upstream release
     - Drop most patches, applied upstream
 
- -- Simon McVittie <smcv@debian.org>  Wed, 16 Sep 2020 00:56:32 +0100
+ -- Simon McVittie <smcv@debian.org>  Wed, 16 Sep 2020 10:31:24 +0100
 
 xdg-desktop-portal (1.7.2-2) unstable; urgency=medium
 
