--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+xdg-desktop-portal (1.8.0-2) unstable; urgency=medium
+
+  * Version the build-dependency on libflatpak-dev.
+    This is significant when backporting to buster.
+  * Preferentially build-depend on libgdk-pixbuf-2.0-dev.
+    We don't need the deprecated Xlib integration that is also pulled in
+    by the older libgdk-pixbuf2.0-dev package (see #974870).
+  * Standards-Version: 4.5.1 (no changes required)
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 24 Nov 2020 12:01:38 +0000
+
 xdg-desktop-portal (1.8.0-1) unstable; urgency=medium
 
   * New upstream release
