--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (1.8.0-3) UNRELEASED; urgency=medium
+
+  * debian/rules: Build with pipewire support in ubuntu as well (LP: #1879580)
+
+ -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Thu, 11 Feb 2021 19:07:35 +0100
+
 xdg-desktop-portal (1.8.0-2) unstable; urgency=medium
 
   * Version the build-dependency on libflatpak-dev.
