--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,17 @@
 xdg-desktop-portal (1.8.1-1) UNRELEASED; urgency=medium
 
+  * New upstream release
+    - Fix a fd leak when opening URIs
+    - Fix directory support in filechooser
+    - Improve Snap support
+    - Fix a crash when setting wallpaper fails
+  * Drop fontconfig build-dependency, no longer needed
   * Define _GNU_SOURCE when compiling the icon validator,
     avoiding an implicit declaration of execvpe()
   * Label the icon validator as coming from Flatpak 1.10.1
     (no actual changes, the code is identical to 1.8.1)
-  * New upstream release
 
- -- Simon McVittie <smcv@debian.org>  Fri, 19 Feb 2021 10:11:29 +0000
+ -- Simon McVittie <smcv@debian.org>  Fri, 19 Feb 2021 10:19:56 +0000
 
 xdg-desktop-portal (1.8.0-3) unstable; urgency=medium
 
