--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (1.10.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 21 Sep 2021 16:17:12 +0100
+
 xdg-desktop-portal (1.8.1-1) unstable; urgency=medium
 
   * New upstream release
