--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xdg-desktop-portal (1.10.1-3) experimental; urgency=medium
+
+  * d/gbp.conf: Branch for experimental
+  * d/control, d/rules: Enable libportal now that it is available in testing
+
+ -- Simon McVittie <smcv@debian.org>  Mon, 15 Nov 2021 20:37:48 +0000
+
 xdg-desktop-portal (1.10.1-2) unstable; urgency=medium
 
   * d/p/open-uri-Avoid-calling-into-o.fd.FileManager1-during-star.patch:
