--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xdg-desktop-portal (1.10.1-4) unstable; urgency=medium
+
+  * Upload to unstable.
+    The libportal-based build-time test coverage passes on all release
+    architectures.
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 16 Nov 2021 10:30:39 +0000
+
 xdg-desktop-portal (1.10.1-3) experimental; urgency=medium
 
   * d/gbp.conf: Branch for experimental
