--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xdg-desktop-portal (1.12.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+  * Drop patches that were applied upstream
+  * d/copyright: Update
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 22 Dec 2021 15:19:39 +0000
+
 xdg-desktop-portal (1.10.1-4) unstable; urgency=medium
 
   * Upload to unstable.
