--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-xdg-desktop-portal (1.12.2-1) UNRELEASED; urgency=medium
+xdg-desktop-portal (1.12.2-1) unstable; urgency=medium
 
   * New upstream release
 
- -- Simon McVittie <smcv@debian.org>  Thu, 17 Mar 2022 23:25:18 +0000
+ -- Simon McVittie <smcv@debian.org>  Thu, 17 Mar 2022 23:25:45 +0000
 
 xdg-desktop-portal (1.12.1-1) unstable; urgency=medium
 
