--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (1.14.0-2) UNRELEASED; urgency=medium
+
+  * Revert starting xdg-desktop-portal during session start
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 18 Mar 2022 10:58:07 +0000
+
 xdg-desktop-portal (1.14.0-1) unstable; urgency=medium
 
   * New upstream release
