--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-xdg-desktop-portal (1.14.0-2) UNRELEASED; urgency=medium
+xdg-desktop-portal (1.14.0-2) unstable; urgency=medium
 
-  * Revert starting xdg-desktop-portal during session start
+  * d/p/Revert-Make-x-d-p-start-on-session-start.patch:
+    Revert starting xdg-desktop-portal during session start.
+    This causes a new GNOME login after a reboot to deadlock.
 
- -- Simon McVittie <smcv@debian.org>  Fri, 18 Mar 2022 10:58:07 +0000
+ -- Simon McVittie <smcv@debian.org>  Fri, 18 Mar 2022 11:16:06 +0000
 
 xdg-desktop-portal (1.14.0-1) unstable; urgency=medium
 
