--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (1.14.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Sat, 19 Mar 2022 14:04:11 +0000
+
 xdg-desktop-portal (1.14.0-2) unstable; urgency=medium
 
   * d/p/Revert-Make-x-d-p-start-on-session-start.patch:
