--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-xdg-desktop-portal (1.14.2-1) UNRELEASED; urgency=medium
+xdg-desktop-portal (1.14.2-1) unstable; urgency=medium
 
   * New upstream release
+  * Drop patches, applied upstream
 
- -- Simon McVittie <smcv@debian.org>  Thu, 31 Mar 2022 12:10:56 +0100
+ -- Simon McVittie <smcv@debian.org>  Thu, 31 Mar 2022 12:11:22 +0100
 
 xdg-desktop-portal (1.14.1-2) unstable; urgency=medium
 
