--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xdg-desktop-portal (1.14.3-1) UNRELEASED; urgency=medium
+
+  * New upstream stable release
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 15 Apr 2022 16:30:22 +0100
+
 xdg-desktop-portal (1.14.2-1) unstable; urgency=medium
 
   * New upstream release
